--- a/package.json
+++ b/package.json
@@ -1,21 +1,9 @@
 {
-  "name": "goit-js-hw-11",
-  "version": "2.0.0",
-  "description": "22",
-  "homepage": "https://vasylkivt.github.io/goit-js-hw-11",
+  "name": "pic-findr",
+  "version": "1.0.0",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vasylkivt/goit-js-hw-11.git"
-  },
-  "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
     "axios": "^1.4.0",
