--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url"
+    "build": "parcel build src/*.html"
   },
   "dependencies": {
     "axios": "^1.4.0",
